--- a/circle.yml
+++ b/circle.yml
@@ -13,6 +13,6 @@ dependencies:
     - mkdir -p ~/docker; docker save test > ~/docker/image.tar
 test:
   override:
-    - docker run --rm -v ${PWD}:/project/repo -it test /bin/sh -c 'cd repo; cmake -P build.cmake'
+    - docker run -v ${PWD}:/project/repo -it test /bin/sh -c 'cd repo; cmake -P build.cmake'
     - bundle
     - bundle exec rspec
